<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/btnBackHome"
        android:layout_width="16pt"
        android:layout_height="16pt"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="5pt"
        android:background="@drawable/leftarrow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textWelcomeLogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:textSize="35dp"
        android:fontFamily="sans-serif-black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEnterLogin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/userName_hint"
        android:layout_marginTop="155dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="267dp"
        android:layout_height="67dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="70dp"
        android:textSize="35dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgottenLogin"
        android:textSize="18dp" />
    <TextView
        android:layout_width="234dp"
        android:layout_height="20dp"
        android:layout_marginLeft="110dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/orCreateLogin"
        android:textSize="18dp" />

</LinearLayout>